# resume-analysis

./: .dockerignore  .gitignore  README.md  docker-compose.yml  interview_results.db  main.py  pyproject.toml
backend/: Dockerfile  app.py  database.py  gunicorn.conf.py  interview_results.db  mock_interview.py  pyproject.toml  requirements.txt  resume_anlayze.py
backend/docs/: Behavior.txt  Codility.txt  Questions.txt
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/component/: MockInterview.tsx  ResumeAnalysis.tsx
frontend/lib/: firebase.ts
